--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -1,11 +1,15 @@
 <ion-header no-border>
-    <ion-toolbar>
+    <ion-toolbar color="dark">
         <ion-title>
             Pendientes
         </ion-title>
     </ion-toolbar>
 </ion-header>
 
-<ion-content>
-    <h1>Hola mundo</h1>
+<ion-content color="dark">
+    <ion-list color="dark">
+        <ion-item detail *ngFor="let lista of deseosService.listas" color="dark">
+            <ion-label>{{ lista.titulo }}</ion-label>
+        </ion-item>
+    </ion-list>
 </ion-content>
