Adding fab icon to agregar page

--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -12,4 +12,10 @@
             <ion-label>{{ lista.titulo }}</ion-label>
         </ion-item>
     </ion-list>
+
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="agregarLista()">
+        <ion-fab-button color="tertiary">
+            <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
 </ion-content>
