--- a/src/app/pages/agregar/agregar.page.html
+++ b/src/app/pages/agregar/agregar.page.html
@@ -21,8 +21,8 @@
             <ion-label>Tareas por hacer</ion-label>
         </ion-list-header>
 
-        <ion-item color="dark" *ngFor="let item of lista.items">
-            <ion-checkbox slot="start" color="tertiary" [(ngModel)]="item.completado"></ion-checkbox>
+        <ion-item color="dark" *ngFor="let item of lista.items" class="animated fadeInDown">
+            <ion-checkbox slot="start" color="tertiary" [(ngModel)]="item.completado" (ionChange)="cambioCheck()"></ion-checkbox>
             <ion-label>{{ item.desc }}</ion-label>
         </ion-item>
     </ion-list>
