--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -8,8 +8,9 @@
 
 <ion-content color="dark">
     <ion-list color="dark">
-        <ion-item detail *ngFor="let lista of deseosService.listas" color="dark">
+        <ion-item detail *ngFor="let lista of deseosService.listas" color="dark" (click)="listaSeleccionada( lista )">
             <ion-label>{{ lista.titulo }}</ion-label>
+            <ion-note slot="end" color="tertiary">{{ lista.items.length }} items</ion-note>
         </ion-item>
     </ion-list>
 
