Implementing module for manage tasks and refactor tab1 and tab2 page

--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -7,12 +7,8 @@
 </ion-header>
 
 <ion-content color="dark">
-    <ion-list color="dark">
-        <ion-item detail *ngFor="let lista of deseosService.listas" color="dark" (click)="listaSeleccionada( lista )">
-            <ion-label>{{ lista.titulo }}</ion-label>
-            <ion-note slot="end" color="tertiary">{{ lista.items.length }} items</ion-note>
-        </ion-item>
-    </ion-list>
+
+    <app-listas></app-listas>
 
     <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="agregarLista()">
         <ion-fab-button color="tertiary">
