Implementing pipe for manage changes on complete and uncomplete tasks

--- a/src/app/components/listas/listas.component.html
+++ b/src/app/components/listas/listas.component.html
@@ -1,6 +1,6 @@
 <ion-list color="dark">
-    <ion-item-sliding detail *ngFor="let lista of deseosService.listas">
-        <ion-item color="dark" (click)="listaSeleccionada( lista )">
+    <ion-item-sliding *ngFor="let lista of deseosService.listas | filtroCompletado:terminados">
+        <ion-item detail color="dark" (click)="listaSeleccionada( lista )">
             <ion-label>{{ lista.titulo }}</ion-label>
             <ion-note slot="end" color="tertiary">{{ lista.items.length }} items</ion-note>
         </ion-item>
