--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -8,7 +8,7 @@
 
 <ion-content color="dark">
 
-    <app-listas></app-listas>
+    <app-listas [terminados]="false"></app-listas>
 
     <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="agregarLista()">
         <ion-fab-button color="tertiary">
