--- a/src/app/components/listas/listas.component.html
+++ b/src/app/components/listas/listas.component.html
@@ -10,5 +10,11 @@
                 <ion-icon slot="icon-only" name="trash"></ion-icon>
             </ion-item-option>
         </ion-item-options>
+
+        <ion-item-options side="start">
+            <ion-item-option (click)="editarLista(lista)" color="primary">
+                <ion-icon slot="icon-only" name="create"></ion-icon>
+            </ion-item-option>
+        </ion-item-options>
     </ion-item-sliding>
 </ion-list>
